--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Silky's Website</title>
     </head>
   <body>
-        <embed id="dis" src="discord.com" alt="dis" style="width:100%; height:100%" />
+        <iframe id="mpm" src="discord.com" alt="mpl" style="width:100%; height:100%" />
     </body>
 </html>
