--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Silky's Website</title>
+        <title>SDC</title>
     </head>
   <body>
-        <embed id="mpm" src="discord.com" alt="mpl" style="width:100vw; height:100vh" />
+        <embed id="mpm" src="https://discord.com" alt="mpl" style="width:100vw; height:100vh" />
     </body>
 </html>
